--- a/style.css
+++ b/style.css
@@ -4,33 +4,28 @@
     display: flex;
 }
 
-/* text{
-    font-family:Helvetica, Arial, sans-serif;
-    font-size:11px;
-    pointer-events:none;
+.plyer_input_section{
+    margin-top:  100px;
+    margin-left: 50px;
 }
-#chart{
-    position:absolute;
-    width:500px;
-    height:500px;
-    top:0;
-    left:0;
+#playersTextarea {
+    width: 100%;
+    height: 150px;
+    padding: 10px;
+    box-sizing: border-box;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-bottom: 20px;
+  }
+  
+  #playersTextarea:focus {
+    outline: none;
+    border-color: #007bff;
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+  }
+.winner{
+    background-color: black;
+    padding: 10px 30px;
+    color:white
 }
-#question{
-    position: absolute;
-    width:400px;
-    height:500px;
-    top:0;
-    left:520px;
-}
-#question h1{
-    font-size: 50px;
-    font-weight: bold;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    position: absolute;
-    padding: 0;
-    margin: 0;
-    top:50%;
-    -webkit-transform:translate(0,-50%);
-            transform:translate(0,-50%);
-} */
